fix: adjust nav icon contrast on hover

--- a/common/common.scss
+++ b/common/common.scss
@@ -359,7 +359,7 @@ body.no-ember {
 .d-header-icons .icon:hover,
 .d-header-icons .icon:focus {
   border: 0px;
-  background-color: $--gray80;
+  background-color: $--gray75;
 }
 
 .d-header-icons .d-icon {
